Fix style of search submission icon in grids to prevent wrapping.

--- a/static/june_2007_style/base.less
+++ b/static/june_2007_style/base.less
@@ -999,8 +999,6 @@ div.debug {
     cursor: pointer;
     margin: 0;
     padding: 0;
-    display: block;
-    //float: right;
     border: 1px solid #aaa;
     border-left: none;
 }
